# falloutProject

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  AUDIO_CHAT_IMPLEMENTATION.md  AUTH_SYSTEM_SUMMARY.md  BUGS.md  CHANGELOG.md  CONTAINER_MIGRATION.md  DOCUMENTATION_UPDATE.md  Dockerfile  HANDOFF-2026-06-24.md  HAPPINESS_MECHANICS.md  LIGHTHOUSE_PLAN.md  LIGHTHOUSE_PROGRESS.md  MESSAGING_ARCHITECTURE_PLAN.md  PLAN.md  PLAN_V2.3.0.md  PLAN_V2.4.0.md  PLAN_V2.4.5.md  PLAN_V2.6.md  PLAN_v1.15.0.md  PLAN_v2.6.5.md  QUICK_START_AUTH.md  README.md  RELEASE_v2.5.0.md  RELEASE_v2.6.0.md  RESOURCE_WARNING_PLAN.md  ROADMAP.md  SECURITY_GUIDE.md  SOFT_DELETE_UPDATE.md  STYLE_MIGRATION_GUIDE.md  TESTING.md  THEMES.md  TODO.md  TRAINING_LEVELING_PLAN.md  TWELVE_FACTOR_COMPLIANCE.md  (+18 more)
.github/: dependabot.yml
backend/: .dockerignore  .env.example  .gitignore  AI_MIGRATION.md  Dockerfile  GAME_LOOP_README.md  REFACTORING_PROGRESS.md  check_rooms.py  coverage.json  initial_data.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.py
backend/app/: constants.py  coverage.json
backend/app/admin/: auth.py  views.py
backend/app/agents/: __init__.py  deps.py  dweller_agents.py  dweller_chat_agent.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024_06_22_0824-8f5ca829bb79_initial.py  2024_06_29_1617-d7d1205d632f_dwellers_additional_data.py  2024_07_12_1958-0f646631f7de_thumbnail_url.py  2024_07_14_2342-74e8f3d7a3ba_llm_interaction.py  2024_07_18_0100-abe4ab4135e9_room_image.py  2024_08_11_2328-23487125d425_prompt.py  2024_08_12_0002-e0f442dfc508_prompt_llm_interaction.py  2024_09_08_2244-c9f349d87a80_game_state.py  2024_09_22_2108-56c07aeccb1f_output_type.py  2024_10_12_2109-a8be5a1c4017_simplify_quests.py  2024_10_18_0144-ac889cf9d7b5_initial.py  2025_12_29_0042-12ebb78d9ffd_add_game_loop_tables.py  2025_12_29_0200-3a5f8b9c2d1e_add_exploration_table.py  2025_12_30_1045-3f6b056a8b94_add_dweller_status_and_user_profile.py  2025_12_30_1150-8db3164d3ed7_fix_exploration_dweller_fk_cascade.py  2025_12_30_1156-a3ae46f91798_update_existing_dweller_status.py  2025_12_30_1353-fa045c06e2ae_add_email_verification_and_password_.py  2026_01_01_1500-a1b2c3d4e5f6_add_relationship_pregnancy_breeding_system.py  2026_01_01_1918-c709889b3b11_radio_mode.py  2026_01_02_1144-76fb12f506f5_add_training_system.py  2026_01_02_1448-ecdc11728074_fix_training_status_enum.py  2026_01_02_1854-51ec51a1cb9c_partners_fix.py  2026_01_03_0052-add_chat_notification_clean.py  2026_01_08_1455-34f9ec11db72_initial.py  (+31 more)
backend/app/api/: celery_task.py  deps.py  game_data_deps.py  tasks.py
backend/app/cli/: main.py
backend/app/config/: __init__.py  game_balance.py
backend/app/core/: celery.py  config.py  dramatiq.py  email.py  game_config.py  logfire_config.py  logging.py  security.py
backend/app/crud/: __init__.py  base.py  chat_message.py  dweller.py  exploration.py  game_state.py  incident.py  item_base.py  junk.py  llm_interaction.py  mixins.py  notification.py  objective.py  pregnancy.py  prompt.py  quest.py  quest_party.py  relationship.py  room.py  storage.py  training.py  user.py  user_profile.py  vault.py  vault_mixin.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: request_id.py  security.py
backend/app/models/: __init__.py  base.py  chat_message.py  dweller.py  exploration.py  game_state.py  incident.py  item.py  junk.py  llm_interaction.py  notification.py  objective.py  outfit.py  pregnancy.py  prompt.py  quest.py  quest_party.py  quest_requirement.py  quest_reward.py  relationship.py  room.py  storage.py  training.py  user.py  user_profile.py  uuid_types.py  vault.py  vault_objective.py  vault_quest.py  weapon.py
backend/app/options/: appearance.py  factions.py  items.py  presets.py  races.py  scenes.py
backend/app/schemas/: ai_usage.py  chat.py  common.py  dweller.py  dweller_ai.py  exploration.py  exploration_event.py  happiness.py  incident.py  incident_sse.py  junk.py  llm_interaction.py  objective.py  outfit.py  pregnancy.py  prompt.py  quest.py  radio.py  relationship.py  responses.py  room.py  storage.py  system.py  training.py  user.py  user_profile.py  vault.py  weapon.py
backend/app/scripts/: migrate_objective_data.py  migrate_quest_data.py
backend/app/services/: ai_usage_service.py  auth_service.py  breeding_service.py  changelog_service.py  chat_happiness_service.py  chat_service.py  cleanup_service.py  conversation_service.py  death_service.py  dweller_ai.py  dweller_assignment_service.py  dweller_recycling_service.py  dweller_service.py  event_bus.py  exploration_service.py  game_loop.py  happiness_service.py  health_check.py  incident_service.py  leveling_service.py  minio.py  notification_service.py  objective_assignment_service.py  objective_evaluators.py  objective_notifications.py  open_ai.py  prerequisite_service.py  quest_service.py  quota_service.py  radio_service.py  relationship_service.py  resource_calculator.py  resource_manager.py  reward_service.py  room_service.py  stream_manager.py  training_service.py  user_service.py  vault_service.py  wasteland_service.py  (+1 more)
backend/app/tests/: conftest.py  test_ai_usage_service.py  test_incident_sse.py  test_llm_interaction_model.py  test_logfire_config.py  test_quest_start_404.py
backend/app/utils/: dwellers.py  exceptions.py  image_processing.py  load_quests.py  objective_constants.py  partial.py  room_assets.py  room_json_add_image_urls.py  seed_objectives.py  seed_quests.py  seeding.py  static_data.py  validation.py  version.py
backend/cli/app/: manage.py
backend/data/dwellers/: rare.json
backend/locust/: .env.example  .gitignore  QUICK_REFERENCE.md  README.md  SETUP.md  WINDOWS.md  __init__.py  config.py  locustfile.py  run_tests.ps1  run_tests.sh  setup_test_data.py  utils.py
backend/locust/tasks/: __init__.py  auth_tasks.py  dweller_tasks.py  game_tasks.py  vault_tasks.py
backend/scripts/: create_admin.py  fix_dweller_image_urls.py  migrate_minio_to_rustfs.py  set_rustfs_bucket_policies.py
(+1187 files in other folders)
