[project]
name = "fallout-shelter-fast-api-vue"
version = "0.1.0"
authors = [{ name = "ElderEvil", email = "elder.evil.dev@proton.me" }, ]
description = "Fallout Shelter FastAPI Game is a web-based simulation game where the player manages a vault full of dwellers, balancing their needs and resources to keep the vault thriving."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.17.0,<2.0",
    "asyncpg>=0.30.0,<1.0",
    "celery>=5.5.3,<6.0",
    "faker>=37.11.0",
    "fastapi[standard]>=0.128.0",
    "minio>=7.2.10,<8.0",
    "openai>=2.3.0,<3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0,<12",
    "psycopg>=3.2.10,<4",
    "pydantic-settings>=2.12.0,<3",
    "pydantic-extra-types>=2.10.6",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.1.0,<8",
    "sqladmin[full]>=0.22.0",
    "sqlmodel>=0.0.30,<1",
    "ruff>=0.7.1",
]

[dependency-groups]
test = [
    "aiosqlite>=0.21.0",
    "coverage>=7.10.7",
    "factory-boy>=3.3.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
lint = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.uv]
default-groups = ["test", "lint"]

[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", "__pycache__", ".pytest_cache", "alembic"]
lint.select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ASYNC",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "RUF",
    "FAST",
]

lint.mccabe.max-complexity = 12

lint.ignore = [
    "COM812",
    "ISC001",
    "B008",
    "PTH123",
    "S311",
    "PLR2004",
    "PT023",
    "RUF012",
    "N805",
    "E712",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
