[project]
name = "fallout-shelter-fast-api-vue"
version = "0.1.0"
authors = [{ name = "ElderEvil", email = "elder.evil.dev@proton.me" }, ]
description = "Fallout Shelter FastAPI Game is a web-based simulation game where the player manages a vault full of dwellers, balancing their needs and resources to keep the vault thriving."
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.17.2,<2.0",
    "asyncpg>=0.30.0,<1.0",
    "celery>=5.6.0,<6.0",
    "faker>=39.0.0",
    "fastapi[standard]>=0.128.0",
    "minio>=7.2.20,<8.0",
    "openai>=2.3.0,<3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.0,<13",
    "psycopg>=3.3.2,<4",
    "pydantic>=2.11.10,<2.12",
    "pydantic-settings>=2.12.0,<3",
    "pydantic-extra-types>=2.10.6",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.1.0,<8",
    "sqladmin[full]>=0.22.0",
    "sqlmodel>=0.0.30,<1",
    "httpcore>=1.0.9",
    "greenlet>=3.3.0",
    "pydantic-ai-slim[openai, anthropic]>=1.39.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "celery-types>=0.24.0",
]

[dependency-groups]
test = [
    "aiosqlite>=0.22.1",
    "coverage>=7.13.0",
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
lint = [
    "prek>=0.2.25",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]
perf = [
    "locust>=2.33.0",
]

[tool.uv]
default-groups = ["test", "lint"]

[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".git", "__pycache__", ".pytest_cache", "alembic"]
lint.select = [
    "FAST",
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ASYNC",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "EM",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "RUF",
]

lint.mccabe.max-complexity = 12

lint.ignore = [
    "COM812",
    "ISC001",
    "B008",
    "PTH123",
    "S311",
    "PLR2004",
    "PLC0415",
    "PT023",
    "RUF012",
    "N805",
    "E712",
    "UP037",
    "UP045",
    "UP046",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=json",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
